tests/ui/imports/ambiguous-15.stderr
error: `Error` is ambiguous
  --> $DIR/ambiguous-15.rs:22:9
   |
LL | fn a<E: Error>(_: E) {}
   |         ^^^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `Error` could refer to the trait imported here
  --> $DIR/ambiguous-15.rs:21:5
   |
LL | use self::t3::*;
   |     ^^^^^^^^^^^
   = help: consider adding an explicit import of `Error` to disambiguate
note: `Error` could also refer to the enum imported here
  --> $DIR/ambiguous-15.rs:15:9
   |
LL | pub use t2::*;
   |         ^^^^^
   = help: consider adding an explicit import of `Error` to disambiguate
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

error: aborting due to 1 previous error

Future incompatibility report: Future breakage diagnostic:
error: `Error` is ambiguous
  --> $DIR/ambiguous-15.rs:22:9
   |
LL | fn a<E: Error>(_: E) {}
   |         ^^^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `Error` could refer to the trait imported here
  --> $DIR/ambiguous-15.rs:21:5
   |
LL | use self::t3::*;
   |     ^^^^^^^^^^^
   = help: consider adding an explicit import of `Error` to disambiguate
note: `Error` could also refer to the enum imported here
  --> $DIR/ambiguous-15.rs:15:9
   |
LL | pub use t2::*;
   |         ^^^^^
   = help: consider adding an explicit import of `Error` to disambiguate
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

